--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "developer-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://andykb9b13.github.io/developer-profile",
+  "homepage": "https://andykb9b13.github.io/developer-portfolio",
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
